--- a/config/main.yaml
+++ b/config/main.yaml
@@ -1,10 +1,11 @@
 routine: 'test'
 objects: 'QSO'
+number_of_objects: 100_000
 
 images_config:
   width: 16
   height: 16
-  fov: 0.002
+  fov: 0.002 # image size in degrees
   projection: 'TSC'
   min_cut: 0.5
   get_query_payload: False
