--- a/config/main.yaml
+++ b/config/main.yaml
@@ -1,6 +1,11 @@
 routine: 'test'
 objects: 'QSO'
 number_of_objects: 100_000
+overwrite: True
+
+data_source: 'csv' # csv and fits are available
+data_file:  ${directories.data}/${routine}/${objects}.${data_source}
+
 
 images_config:
   width: 16
@@ -16,5 +21,3 @@ directories:
   data: ${directories.base}/data
   data_run: ${directories.data}/${routine}
   results: ${directories.data_run}/${objects}_${images_config.width}x${images_config.height}
-
-data_file: ${directories.data}/${routine}/${objects}.fits
